# codex

.github/workflows/: issue-deduplicator.yml  rust-ci.yml  rust-release.yml
codex-rs/: Cargo.toml  README.md
codex-rs/app-server-protocol/src/: export.rs  protocol.rs
codex-rs/app-server-test-client/: run_codex_convo_plan.md
codex-rs/app-server-test-client/src/: main.rs
codex-rs/app-server/src/: codex_message_processor.rs  message_processor.rs
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  login.rs
codex-rs/cloud-tasks/src/: lib.rs  util.rs
codex-rs/core/: Cargo.toml  gpt_5_codex_prompt.md
codex-rs/core/src/: auth.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_delegate.rs  config.rs  conversation_history.rs  default_client.rs  exec.rs  lib.rs  mcp_tool_call.rs  response_processing.rs  safety.rs  util.rs  windows.rs
codex-rs/core/tests/: chat_completions_sse.rs  tool_output_truncation.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/keyring-store/src/: lib.rs
codex-rs/login/src/: device_code_auth.rs  lib.rs  (+1 more)
codex-rs/protocol/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/utils/image/: Cargo.toml
codex-rs/utils/image/src/: lib.rs
codex-rs/windows-sandbox/: Cargo.toml
codex-rs/windows-sandbox-py/: env_utils.py  network_sandbox.py  sandbox_smoketests.py  windows_restricted_token_v3.py
codex-rs/windows-sandbox-rs/: Cargo.toml
docs/: config.md
(+81 files in other folders)
